--- a/package.json
+++ b/package.json
@@ -10,10 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/leaflet": "^1.9.21",
+    "@types/leaflet.markercluster": "^1.5.6",
+    "@types/react-leaflet": "^2.8.3",
+    "axios": "^1.13.2",
+    "dotenv": "^17.3.1",
     "ethers": "^6.16.0",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet-geosearch": "^4.2.2",
+    "leaflet.markercluster": "^1.5.3",
     "pdf-lib": "^1.17.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
+    "react-leaflet-cluster": "^4.0.0",
     "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
