--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
   "version": 2,
   "builds": [
     { "src": "index.html", "use": "@vercel/static" },
-    { "src": "backend/server.js", "use": "@vercel/node" }
+    { "src": "backend/server.js", "use": "@vercel/node" },
+    { "src": "src/main.jsx", "use": "@vercel/static" }
   ],
   "rewrites": [
     { "source": "/api/(.*)", "destination": "backend/server.js" },
