--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "version": 2,
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/backend/server.js" }
+    {
+      "source": "/api/(.*)",
+      "destination": "/backend/server.js"
+    }
   ]
 }
