--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-geosearch": "^4.2.2",
     "leaflet.markercluster": "^1.5.3",
+    "matter-attractors": "^0.1.6",
+    "matter-js": "^0.20.0",
+    "matter-wrap": "^0.2.0",
     "mongodb": "^7.1.0",
     "pdf-lib": "^1.17.1",
     "pg": "^8.18.0",
