--- a/package.json
+++ b/package.json
@@ -46,12 +46,15 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.24",
     "drizzle-kit": "^0.31.9",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "nodemon": "^3.1.11",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.2.0",
     "vite": "^7.2.4"
   },
   "description": "A modern Web3 dApp to manage and verify property records using blockchain.   User MetaMask wallet se login karta hai, property hash search kar sakta hai, aur future me smart contract ke through nayi properties add ki ja sakengi.",
